syntax = "proto3";
option go_package = "github.com/satont/tsuwari/libs/grpc/generated/api/integrations_lastfm";
package api.integrations_lastfm;

message GetAuthLink {
	string link = 1;
}

message GetDataResponse {
	string user_name = 1;
	string avatar = 2;
}

message PostCodeRequest {
	string code = 1;
}
